--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -32,12 +32,13 @@
     </div>
     <div class="row">
       <div class="col-lg-7">
-        <img src="images/illustration-mockups.svg" alt="mockups">
+        <img class="mockup-img" src="images/illustration-mockups.svg" alt="mockups">
       </div>
       <div class="col-lg-5">
         <h1>Build The Community Your Fans Will Love</h1>
 
-        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+        <p class="main-text">Huddle re-imagines the way we build communities. You have a voice, but so does your
+          audience.
           Create connections with your users as you engage in genuine discussion.</p>
 
         <a class="btn btn-primary btn-rounded">Register</a>
@@ -45,11 +46,9 @@
     </div>
     <div class="row">
       <div class="col-lg-12 contact-icons">
-        <span><i class="fa-brands fa-facebook"></i></span>
-        <span>
-          <i class="fa-brands fa-twitter"></i>
-        </span>
-        <span><i class="fa-brands fa-instagram"></i></span>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
       </div>
     </div>
     <div class="row">
