--- a/index.html
+++ b/index.html
@@ -25,40 +25,46 @@
 <body>
 
   <div class="container">
-    <div class="row header">
-      <div class="col-lg-12">
-        <img src="images/logo.svg" alt="logo">
+    <header>
+      <div class="row header">
+        <div class="col-lg-12">
+          <img src="images/logo.svg" alt="logo">
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-7">
-        <img class="mockup-img" src="images/illustration-mockups.svg" alt="mockups">
-      </div>
-      <div class="col-lg-5">
-        <h1>Build The Community Your Fans Will Love</h1>
+    </header>
+    <main>
+      <div class="row">
+        <div class="col-lg-7">
+          <img class="mockup-img" src="images/illustration-mockups.svg" alt="mockups">
+        </div>
+        <div class="col-lg-5">
+          <h1>Build The Community Your Fans Will Love</h1>
 
-        <p class="main-text">Huddle re-imagines the way we build communities. You have a voice, but so does your
-          audience.
-          Create connections with your users as you engage in genuine discussion.</p>
+          <p class="main-text">Huddle re-imagines the way we build communities. You have a voice, but so does your
+            audience.
+            Create connections with your users as you engage in genuine discussion.</p>
 
-        <a class="btn btn-primary btn-rounded">Register</a>
+          <a class="btn btn-primary btn-rounded">Register</a>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12 contact-icons">
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+    </main>
+    <footer>
+      <div class="row">
+        <div class="col-lg-12 contact-icons">
+          <a href="#" aria-label="Facebook logo"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#" aria-label="Twitter logo"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <p class="attribution">
-          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-          Coded by <a href="https://github.com/guimar86" target="_blank">Renato Martins</a>.
-        </p>
+      <div class="row">
+        <div class="col-lg-12">
+          <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="https://github.com/guimar86" target="_blank">Renato Martins</a>.
+          </p>
+        </div>
       </div>
-    </div>
+    </footer>
 
   </div>
 
